# agentmemory-py

./: README.md  pyproject.toml
agentmemory/: __init__.py  client.py
agentmemory_exchange/: __init__.py  client.py
agentmemory_exchange.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ECONOMY.md  GOVERNANCE.md  PRODUCT_BIBLE.md  README.md
docs/website/: economy.md  quickstart.md
