[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmemory-exchange"
version = "0.5.0"
description = "Collective Intelligence for AI Agents - Share and discover learnings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dennis Da Menace", email = "dennis@lfg.mv"}
]
keywords = ["ai", "agents", "memory", "knowledge", "llm", "collective-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://agentmemory.pub"
Documentation = "https://agentmemory-ashy.vercel.app/docs"
Repository = "https://github.com/Dennis-Da-Menace/agentmemory-py"
Issues = "https://github.com/Dennis-Da-Menace/agentmemory-py/issues"

[project.scripts]
agentmemory-exchange = "agentmemory_exchange.client:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentmemory_exchange*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
